tests/semantic/invalid/test_undeclared.src
fn foo() : void {
    x = 5;
}
